fix mobile spacing

--- a/src/modules/views/home/home.css
+++ b/src/modules/views/home/home.css
@@ -1,18 +1,29 @@
 
-.home-container {
-	display: grid;
+.container {
+	/* display: grid;
     justify-items: center;
     justify-content: space-evenly;
     align-items: center;
     align-content: space-between;
-    grid-row-gap: 1rem;
+    grid-row-gap: 1rem; */
     margin: 1rem;
 }
 
+.home-container {
+	display: grid;
+	column-gap: 10px;
+	row-gap: 10px;
+	grid-template-columns: repeat(auto-fit, minmax(200px, 450px));
+	overflow-y: auto;
+	align-content: space-around;
+	justify-content: space-evenly;
+	align-items: stretch;
+}
+
 .card-body {
-	width: 550px;
+	width: 100%;
 	max-width: 550px;
-	margin: 0rem 1rem;
+	padding: 0px 1rem;
 }
 /* media query */
 @media screen and (max-width: 390px) {
